# arithmeval

./: README.md  setup.cfg
.github/workflows/: python-publish.yml  tests.yml
arithmetic_eval/: __init__.py  constants.py  exceptions.py  tests.py  utils.py
