[metadata]
name = arithmeval
version = 0.2.1
description = A package that lets you safely evaluate arithmetic expressions.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/enesklcarslan/arithmeval/
author = Enes Kilicarslan
author_email = enesklcarslan@gmail.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.9
[options]
include_package_data = true
packages = find:
python_requires = >=3.8